added logo to bottom

--- a/Eggcellent_Ext/data/pages/main/index.html
+++ b/Eggcellent_Ext/data/pages/main/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="icon"
-      href="../assets/icons/Square512x512.png"
+      href="../../assets/icons/512x512.png"
       type="image/x-icon"
     />
   </head>
@@ -32,6 +32,12 @@
         </div>
         <hr />
         <div class="search-results" id="results">
+
+          <div class="result"></div>
+          <div class="result"></div>
+          <div class="result"></div>
+          <div class="result"></div>
+          <div class="result"></div>
 
         </div>
 
@@ -58,6 +64,7 @@
         </div>
       </div>
     </div>
+    <a href="https://waradu.dev/egg" target="_blank" class="logo"></a>
     <script src="script.js"></script>
   </body>
 </html>
