--- a/Eggcellent_Ext/data/pages/main/index.html
+++ b/Eggcellent_Ext/data/pages/main/index.html
@@ -64,7 +64,7 @@
           <div class="rcount" id="rcount">0/0</div>
         </div>
       </div>
-      <div class="context-menu">
+      <div class="context-menu" id="cm">
         <div class="menu-item">
           <div class="menu-item-icon material-symbols-rounded">grid_view</div>
           <div class="menu-item-text">Test</div>
