--- a/Eggcellent_Ext/data/pages/main/index.html
+++ b/Eggcellent_Ext/data/pages/main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="flat">
+<html class="default-theme">
   <head>
     <title>Search</title>
     <meta charset="utf-8" />
@@ -66,6 +66,10 @@
       </div>
       <div class="context-menu" id="cm">
       </div>
+    </div>
+    <div class="overlay" id="overlay">
+      <button class="confirm" id="confirm">Accept <span class="key material-symbols-rounded">keyboard_return</span></button>
+      <button class="cancel" id="cancel">Cancel <span class="key">esc</span></button>
     </div>
     <a href="https://waradu.dev/egg" target="_blank" class="logo"></a>
     <script type="module" src="script.js"></script>
