--- a/Eggcellent_Ext/data/pages/main/index.html
+++ b/Eggcellent_Ext/data/pages/main/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <div class="preserve-position">
+      <h1 class="header">Eggcellent</h1>
       <div class="search-container">
         <div class="search-bar">
           <div class="icon material-symbols-rounded">search</div>
