--- a/Eggcellent_Web/index.html
+++ b/Eggcellent_Web/index.html
@@ -16,8 +16,8 @@
       <h1 class="title">Eggcellent</h1>
       <p class="p1">
         Do you have too many bookmarks, history, extensions, and tabs in your
-        browser? Do you want to manage them easily and quickly? Then you need Eggcellent, the search bar
-        that lets you do more with less.
+        browser? Do you want to manage them easily and quickly? Then you need
+        Eggcellent, the search bar that lets you do more with less.
       </p>
       <p class="p2">
         Eggcellent is a search bar that lets you search your bookmarks, history,
@@ -25,11 +25,15 @@
         them, disable them, uninstall them, delete them, clear them, and more.
       </p>
       <p class="p3">
-        Eggcellent is easy to use, fast, and <strong>100% free</strong>. It helps
-        you eggspand your productivity and eggsplore new possibilities. It is the
-        ultimate search bar for your browser. Try it today and see the difference.
-        Eggcellent is eggstraordinary.
+        Eggcellent is easy to use, fast, and <strong>100% free</strong>. It
+        helps you eggspand your productivity and eggsplore new possibilities. It
+        is the ultimate search bar for your browser. Try it today and see the
+        difference. Eggcellent is eggstraordinary.
       </p>
+      <div class="download">
+        <div class="material-symbols-rounded">download</div>
+        Download and be an eggspert
+      </div>
     </div>
     <canvas class="confetti" id="canvas"></canvas>
     <script type="module" src="script.js"></script>
