--- a/Eggcellent_Ext/data/pages/main/index.html
+++ b/Eggcellent_Ext/data/pages/main/index.html
@@ -14,9 +14,9 @@
       href="../../assets/icons/512x512.png"
       type="image/x-icon"
     />
-    <script src="./modules/fuse.js"></script>
-    <script src="./modules/math.js"></script>
-    <script type="module" src="./modules/results.js"></script>
+    <script src="../modules/fuse.js"></script>
+    <script src="../modules/math.js"></script>
+    <script type="module" src="../modules/results.js"></script>
   </head>
   <body>
     <div class="preserve-position">
