--- a/Eggcellent_Ext/data/pages/main/index.html
+++ b/Eggcellent_Ext/data/pages/main/index.html
@@ -16,6 +16,7 @@
     />
     <script src="../modules/fuse.js"></script>
     <script src="../modules/math.js"></script>
+    <script src="../modules/confetti.js"></script>
     <script type="module" src="../modules/results.js"></script>
   </head>
   <body>
