--- a/Eggcellent_Ext/data/pages/main/index.html
+++ b/Eggcellent_Ext/data/pages/main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="default-theme">
+<html class="default-theme" lang="en">
   <head>
     <title>Search</title>
     <meta charset="utf-8" />
@@ -72,6 +72,10 @@
     <div class="overlay" id="overlay">
       <button class="confirm" id="confirm">Accept <span class="key material-symbols-rounded">keyboard_return</span></button>
       <button class="cancel" id="cancel">Cancel <span class="key">esc</span></button>
+    </div>
+    <div class="overlay" id="text-overlay">
+      <label for="text-input" id="text-input-label">Input:</label>
+      <input type="text" name="text-input" id="text-input">
     </div>
     <a href="https://waradu.dev/egg" target="_blank" class="logo"></a>
     <script type="module" src="script.js"></script>
