--- a/Eggcellent/pages/main/index.html
+++ b/Eggcellent/pages/main/index.html
@@ -37,9 +37,7 @@
         </div>
         <hr />
         <div class="search-results" id="results"></div>
-
         <hr />
-
         <div class="footer">
           <div class="key">
             <div class="button material-symbols-rounded" id="au">
@@ -66,16 +64,197 @@
           <div class="rcount" id="rcount">0/0</div>
         </div>
       </div>
-      <div class="context-menu" id="cm">
-      </div>
+      <div class="context-menu" id="cm"></div>
     </div>
     <div class="overlay" id="overlay">
-      <button class="confirm" id="confirm">Accept <span class="key material-symbols-rounded">keyboard_return</span></button>
-      <button class="cancel" id="cancel">Cancel <span class="key">esc</span></button>
+      <button class="confirm" id="confirm">
+        Accept <span class="key material-symbols-rounded">keyboard_return</span>
+      </button>
+      <button class="cancel" id="cancel">
+        Cancel <span class="key">esc</span>
+      </button>
     </div>
     <div class="overlay" id="text-overlay">
       <label for="text-input" id="text-input-label">Input:</label>
-      <input type="text" name="text-input" id="text-input">
+      <input type="text" name="text-input" id="text-input" />
+    </div>
+    <div class="help" id="help-overlay">
+      <div class="header">
+        <div class="title">Eggcellent - Help</div>
+        <div class="material-symbols-rounded close">close</div>
+      </div>
+      <div class="group">
+        <div class="group-header">
+          <div class="text">Quick Keys</div>
+          <div class="desc">
+            <div class="key">Key</div>
+            then
+            <div class="key">Space</div>
+            or
+            <div class="key">Tab</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Filter Tabs</div>
+          <div class="desc">
+            Only
+            <div class="key">Space</div>
+            or
+            <div class="key">Tab</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Filter Bookmarks</div>
+          <div class="desc">
+            <div class="key">.</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Filter Browsing History</div>
+          <div class="desc">
+            <div class="key">,</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Filter Extensions</div>
+          <div class="desc">
+            <div class="key">-</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Command</div>
+          <div class="desc">
+            <div class="key">&gt;</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Solve Math Term</div>
+          <div class="desc">
+            <div class="key">=</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Manage Todos</div>
+          <div class="desc">
+            <div class="key">&lt;</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Links</div>
+          <div class="desc">
+            <div class="key">+</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Speedtest</div>
+          <div class="desc">
+            <div class="key">$</div>
+          </div>
+        </div>
+      </div>
+      <div class="group">
+        <div class="group-header">
+          <div class="text">Keybinds</div>
+          <div class="desc">
+            All keybinds
+          </div>
+        </div>
+        
+        <div class="group-item">
+          <div class="text">Up</div>
+          <div class="desc">
+            <div class="key material-symbols-rounded">arrow_upward</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Down</div>
+          <div class="desc">
+            <div class="key material-symbols-rounded">arrow_downward</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Unselect</div>
+          <div class="desc">
+            <div class="key">ESC</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Use</div>
+          <div class="desc">
+            <div class="key material-symbols-rounded">keyboard_return</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Options</div>
+          <div class="desc">
+            <div class="key material-symbols-rounded">shift</div>
+            <div class="key material-symbols-rounded">keyboard_return</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Open Help</div>
+          <div class="desc">
+            <div class="key">Alt</div>
+            <div class="key">?</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Open Search Page</div>
+          <div class="desc">
+            <div class="key">Alt</div>
+            <div class="key">S</div>
+            or
+            <div class="key">CUSTOM</div>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Open Settings</div>
+          <div class="desc">
+            <div class="key">Alt</div>
+            <div class="key material-symbols-rounded">arrow_upward</div>
+            <div class="key">S</div>
+          </div>
+        </div>
+      </div>
+      <div class="group">
+        <div class="group-header">
+          <div class="text">Others + FAQ</div>
+          <div class="desc">
+            Everything else including FAQ
+          </div>
+        </div>
+        
+        <div class="group-item">
+          <div class="text">Contact</div>
+          <div class="desc">
+            Join my <a href="https://discord.gg/W6k8eMb9gB">Discord</a>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Why Not On Chrome Store</div>
+          <div class="desc">
+            Minium age 18
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Privacy</div>
+          <div class="desc">
+            We do not collect any data
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">Source Code</div>
+          <div class="desc">
+            On <a href="https://github.com/Waradu/Eggcellent">Github</a>
+          </div>
+        </div>
+        <div class="group-item">
+          <div class="text">How Can I Donate</div>
+          <div class="desc">
+            Ask me on <a href="https://discord.gg/W6k8eMb9gB">Discord</a>
+          </div>
+        </div>
+      </div>
     </div>
     <a href="https://waradu.dev/egg" target="_blank" class="logo"></a>
     <script type="module" src="script.js"></script>
