--- a/Eggcellent/pages/main/index.html
+++ b/Eggcellent/pages/main/index.html
@@ -233,7 +233,7 @@
         <div class="group-item">
           <div class="text">Why Not On Chrome Store</div>
           <div class="desc">
-            Minium age 18
+            Minimum age 18
           </div>
         </div>
         <div class="group-item">
