changed help page styles

--- a/Eggcellent/pages/main/index.html
+++ b/Eggcellent/pages/main/index.html
@@ -78,10 +78,14 @@
       <label for="text-input" id="text-input-label">Input:</label>
       <input type="text" name="text-input" id="text-input" />
     </div>
+    <div class="help-arrow" id="help-toggle">
+      <div class="harrow"></div>
+      <div class="harrow"></div>
+    </div>
     <div class="help closed" id="help-overlay">
       <div class="header">
         <div class="title">Eggcellent - Help</div>
-        <div class="material-symbols-rounded close" id="help-close">close</div>
+        <div class="material-symbols-rounded close">question_mark</div>
       </div>
       <div class="group">
         <div class="group-header">
@@ -210,9 +214,7 @@
         <div class="group-item">
           <div class="text">Open Settings</div>
           <div class="desc">
-            <div class="key">Alt</div>
-            <div class="key material-symbols-rounded">arrow_upward</div>
-            <div class="key">S</div>
+            Click Extension Icon
           </div>
         </div>
       </div>
@@ -256,7 +258,7 @@
         </div>
       </div>
     </div>
-    <div id="help-open" class="logo" title="Help"></div>
+    <div id="settings-open" class="logo" title="Help"></div>
     <script type="module" src="script.js"></script>
   </body>
 </html>
