- fixed fav icon - fixed browser close on alt + s

--- a/Eggcellent/pages/main/newtab.html
+++ b/Eggcellent/pages/main/newtab.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="shortcut icon"
-      href="../../assets/icons/512x512.png"
+      href="../../assets/icons/512x512_Outlined.png"
     />
     <script src="./js/modules/fuse.js"></script>
     <script src="./js/modules/math.js"></script>
