- added settings - added light mode

--- a/Eggcellent/pages/main/index.html
+++ b/Eggcellent/pages/main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="default-theme" lang="en">
+<html lang="en">
   <head>
     <title>Eggcellent</title>
     <meta charset="utf-8" />
@@ -136,6 +136,12 @@
             <div class="key">=</div>
           </div>
         </div>
+        <div class="group-item">
+          <div class="text">Settings</div>
+          <div class="desc">
+            <div class="key">:</div>
+          </div>
+        </div>
         <div class="group-item" hidden>
           <div class="text">Manage Todos</div>
           <div class="desc">
@@ -208,12 +214,6 @@
             <div class="key">S</div>
             or
             <div class="key">CUSTOM</div>
-          </div>
-        </div>
-        <div class="group-item">
-          <div class="text">Open Settings</div>
-          <div class="desc">
-            Click Extension Icon
           </div>
         </div>
       </div>
