- Added Search In - Fixed search type display word wrap

--- a/Eggcellent/pages/main/index.html
+++ b/Eggcellent/pages/main/index.html
@@ -160,6 +160,12 @@
             <div class="key">$</div>
           </div>
         </div>
+        <div class="group-item">
+          <div class="text">Hex Code Preview</div>
+          <div class="desc">
+            <div class="key">#</div>
+          </div>
+        </div>
       </div>
       <div class="group">
         <div class="group-header">
