--- a/Eggcellent/pages/main/index.html
+++ b/Eggcellent/pages/main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="default-theme" lang="en">
   <head>
     <title>Eggcellent</title>
     <meta charset="utf-8" />
