--- a/Eggcellent-WXT/entrypoints/newtab/index.html
+++ b/Eggcellent-WXT/entrypoints/newtab/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Default Popup Title</title>
-    <meta name="manifest.type" content="browser_action" />
+    <title>Eggcellent</title>
+    <link rel="shortcut icon" href="/icon/512.png" />
   </head>
   <body>
     <div id="app"></div>
